GF-41396 (2) Production-Small Header -Remove number from small header and make text and border color all same, input header default color and collapse header animation are fixed too. Enyo-DCO-1.1-Signed-off-by: Brooke Peterson <brooke.peterson@lge.com>

--- a/css/moonstone-light.css
+++ b/css/moonstone-light.css
@@ -1648,7 +1648,7 @@
   -webkit-transition: height 0.2s linear;
   -moz-transition: height 0.2s linear;
   max-width: 100%;
-  padding: 4px 0px 10px 0px;
+  padding: 0 0 10px 0px;
   background-color: transparent;
   background-repeat: no-repeat;
   background-position: top left;
@@ -1664,6 +1664,7 @@
   border: none;
 }
 .moon-header-title-above {
+  margin-top: 5px;
   width: 30px;
   height: 1.2em;
 }
@@ -1679,7 +1680,7 @@
   letter-spacing: -0.05em;
   text-transform: uppercase;
   line-height: normal;
-  height: 154px;
+  height: 150px;
 }
 .enyo-locale-non-latin .moon-header-title {
   font-family: "LG Display";
@@ -1739,7 +1740,7 @@
 /* Header Client */
 .moon-header-client {
   position: absolute;
-  bottom: 10px;
+  bottom: 20px;
   left: 0;
   right: 0;
   text-align: right;
@@ -1770,25 +1771,25 @@
 .moon-header.moon-small-header {
   height: 240px;
 }
+.moon-small-header .moon-header-title-above {
+  height: 0;
+  opacity: 0;
+}
 .moon-small-header .moon-header-title {
   line-height: normal;
 }
 .moon-small-header .moon-header-title-wrapper {
-  padding-left: 58px;
+  padding-left: 0;
   box-sizing: border-box;
-  top: -42px;
-  max-height: 154px;
+  max-height: 150px;
 }
 .enyo-locale-right-to-left .moon-small-header .moon-header-title-wrapper {
-  padding-right: 58px;
-  padding-left: 0;
+  padding-right: 0;
 }
 .moon-small-header .moon-header-title-below {
-  top: -42px;
   max-height: 40px;
 }
 .moon-small-header .moon-header-sub-title-below {
-  top: -42px;
   max-height: 40px;
 }
 .hidden-title .moon-header-title,
@@ -2879,18 +2880,24 @@
   left: 0;
   height: 360px;
   width: 100%;
-  padding: 9px 10px 10px;
+  padding: 5px 10px 10px;
   box-sizing: border-box;
-  border-top: 1px solid #ffffff;
+  border-top: 2px solid #4b4b4b;
 }
 .moon-panel-mini-header {
-  margin-top: 20px;
-  color: #ffffff;
+  margin-top: 25px;
+  color: #4b4b4b;
   display: block;
   overflow: hidden;
   padding: 0px;
 }
+.spotlight .moon-panel-mini-header {
+  color: #ffffff;
+}
 .moon-panel-mini-header-title-above {
+  color: #4b4b4b;
+}
+.spotlight .moon-panel-mini-header-title-above {
   color: #ffffff;
 }
 .moon-panel .moon-panel-mini-header-wrapper.spotlight {
@@ -2899,7 +2906,7 @@
 }
 /* Activity Panels Overrides */
 .moon-panels.activity .moon-panel-mini-header-wrapper {
-  border-top: 1px solid #4b4b4b;
+  border-top: 2px solid #4b4b4b;
 }
 .moon-panels.activity .moon-panel-mini-header,
 .moon-panels.activity .moon-panel-mini-header-title-above {
@@ -2908,6 +2915,9 @@
 .moon-panels.activity .moon-panel-mini-header-wrapper.spotlight .moon-panel-mini-header,
 .moon-panels.activity .moon-panel-mini-header-wrapper.spotlight .moon-panel-mini-header-title-above {
   color: #ffffff;
+}
+.moon-panel .moon-panel-mini-header-wrapper.spotlight {
+  border-top: 2px solid #ffffff;
 }
 /* Panels */
 .moon-panels.activity,
